# CppCon2020

./: .gitattributes  README.md
Lightning Talks/a_picture_is_worth_thousand_words/: .presentation
Presentations/2020_the_year_of_sanitizers/: .presentation
Presentations/a_new_decade_of_visual_studio_cpp20_open_stl_and_more/: .presentation
Presentations/a_physical_units_library_for_the_next_cpp/: .presentation
Presentations/a_relaxed_guide_to_memory_order_relaxed/: .presentation
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/: .clang-format  .gitignore  CMakeLists.txt  README.md  setup_for_demo.sh
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/CMake/: UseCompilerCache.cmake
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/: CMakeLists.txt
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/01HelloApprovals/: CMakeLists.txt  HelloApprovalsTests.cpp  README.md  main.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/02GildedRose/: .gitignore  CMakeLists.txt  README.md
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/02GildedRose/lib/: GildedRose.cc  GildedRose.h
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/02GildedRose/tests/: GildedRoseApprovals.cpp  GildedRoseTest.cpp  TestHelpers.cpp  TestHelpers.h  main.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/02GildedRose/tests/detailed_tests/: GildedRoseApprovalsAllSteps.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/03LogFiles/: CMakeLists.txt  README.md  test_class_with_logging.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/04SVGFiles/: CMakeLists.txt  README.md  SVGReporter.cpp  SVGReporter.h  svg_test.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/04SVGFiles/approval_tests/: svg_test.SVG_Test_1.approved.txt
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/05QTableWidget/: CMakeLists.txt  README.md  TableWidgetTextTest.cpp  main.cpp
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/05QTableWidget/helpers/: QTableWidgetExamples.cpp  QTableWidgetExamples.h
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/06QImage/: CMakeLists.txt  ImageTest.cpp  README.md
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/demos/06QImage/helpers/: QImageExamples.cpp  QImageExamples.h
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/preparation/: preparation.md
Presentations/quickly_testing_qt_desktop_applications_with_approval_tests/approvals_live_demo-2020-09-cppcon/shared_code/: CMakeLists.txt  ComplexOperation.cpp  ComplexOperation.h  FileUtilities.cpp  FileUtilities.h  HelloApprovals.cpp  HelloApprovals.h  Logger.cpp  Logger.h  SVGDrawing.cpp  SVGDrawing.h  StringUtilities.cpp  StringUtilities.h
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/cmake/: CppCon20Find.cmake  Functions.cmake
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/cmake/modules/: FindAsio.cmake
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/async_initiate/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/async_initiate/include/cppcon20/: async_event.hpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/async_initiate/tests/: CMakeLists.txt  async_event.cpp  service.cpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/basic/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/basic/include/cppcon20/: async_event.hpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/basic/tests/: CMakeLists.txt  pending.cpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/complete/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/complete/include/cppcon20/: async_event.hpp  service.hpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/complete/tests/: CMakeLists.txt  async_event.cpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/no_service/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/no_service/include/cppcon20/: async_event.hpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/no_service/tests/: CMakeLists.txt  async_event.cpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/service/: CMakeLists.txt
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/service/include/cppcon20/: async_event.hpp  pending.hpp
Presentations/the_networking_ts_from_scratch_io_objects/CppCon2020Talk-master/src/service/tests/: CMakeLists.txt  async_event.cpp  service.cpp
_tools/: add.py  readme_header.md
(+74 files in other folders)
